configs/kong/proxy-config/demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations: 
    plugins.konghq.com: basic-auth
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: httpbin
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-2
spec:
  rules:
  - http:
      paths:
      - path: /baz
        backend:
          serviceName: httpbin
          servicePort: 80
